# rust-shopsite-utils

./: Cargo.toml  LICENSE  README.md
make-shopsite-backup/: Cargo.toml
make-shopsite-backup/src/: config.rs  main.rs
shopsite-aa/: Cargo.toml
shopsite-aa/src/: de.rs  deser_toplevel.rs  deser_value.rs  lib.rs
shopsite-aa/src/de/: error.rs  parser_io.rs  position.rs
shopsite-aa/tests/: test.aa  test.rs  test_de.rs
shopsite-aa2json/: Cargo.toml
shopsite-aa2json/src/: main.rs
shopsite-aa2json/tests/: expected-compact.json  expected-pretty-spaces.json  expected-pretty-tabs.json  integration_test.rs
