[package]
name = "shopsite-aa"
version = "0.1.0"
authors = []
edition = "2018"
description = "Serde deserializer for ShopSite `.aa` files."

[lib]
crate-type = ["lib"]

[dependencies]
encoding = "0.2.33"
#regex = { version = "1.3.6", default-features = false, features = ["std", "perf"] }  # no Unicode support
#lazy_static = "1.4.0"
serde = "1.0.106"
derive_more = "0.99.5"

[dev-dependencies]
serde = { version = "1.0.106", features = ["derive"] }  # Serde derives are only used by tests
serde_bytes = "0.11.3"
