[package]
name = "shopsite-aa2json"
version = "0.1.0"
authors = []
edition = "2018"
description = "Command-line tool that converts a ShopSite `.aa` file to JSON."

[dependencies]
serde = "1.0.106"
serde_json = "1.0.51"
serde-transcode = "1.1.0"
shopsite-aa = { path = "../shopsite-aa" }
structopt = "0.3.12"
